src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Rep__c</fullName>
        <label>Account Rep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>CCR Employee</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Chuck Dehnel</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Haven Employee</fullName>
                </value>
                <value>
                    <fullName>ICFR Employee</fullName>
                </value>
                <value>
                    <fullName>Jamie Berkoben</fullName>
                </value>
                <value>
                    <fullName>Josh Craig</fullName>
                </value>
                <value>
                    <fullName>Kirill</fullName>
                </value>
                <value>
                    <fullName>Kyle Higgins</fullName>
                </value>
                <value>
                    <fullName>Lucy</fullName>
                </value>
                <value>
                    <fullName>Matt Cincogrono</fullName>
                </value>
                <value>
                    <fullName>Ralph Johnson</fullName>
                </value>
                <value>
                    <fullName>Richard Hennessy</fullName>
                </value>
                <value>
                    <fullName>Richie Webber</fullName>
                </value>
                <value>
                    <fullName>Ron Shippert</fullName>
                </value>
                <value>
                    <fullName>Santino Coviello</fullName>
                </value>
                <value>
                    <fullName>Saul Kane</fullName>
                </value>
                <value>
                    <fullName>Self Referral</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Spenser Rose</fullName>
                </value>
                <value>
                    <fullName>Stephanie King</fullName>
                </value>
                <value>
                    <fullName>Thomas Hernandez</fullName>
                </value>
                <value>
                    <fullName>Tim Kavanagh</fullName>
                </value>
                <value>
                    <fullName>TRT Employee</fullName>
                </value>
                <value>
                    <fullName>Tyler Forsberg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Cash__c</fullName>
        <label>Client Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <description>DOB</description>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible_In_Net__c</fullName>
        <label>Deductible (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Met_In_Net__c</fullName>
        <label>Deductible Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Met_Out_Net__c</fullName>
        <label>Deductible Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Out_Net__c</fullName>
        <label>Deductible (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox__c</fullName>
        <label>Detox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discharge_Facility__c</fullName>
        <label>Discharge Facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_By__c</fullName>
        <label>Due By:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMR_Assessment__c</fullName>
        <label>EMR Assessment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <description>Estimated Time Of Arrival</description>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Facility_Interest__c</fullName>
        <label>Facility Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>The Recovery Team</fullName>
                </value>
                <value>
                    <fullName>The Recovery Team Mental Health</fullName>
                </value>
                <value>
                    <fullName>Indiana Center For Recovery</fullName>
                </value>
                <value>
                    <fullName>Center City Recovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IOP_Cost__c</fullName>
        <label>IOP Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <label>Insurance Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Length_of_Program__c</fullName>
        <label>Length of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_Of_Care__c</fullName>
        <description>Levels of care desired</description>
        <label>Level Of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP/OP</fullName>
                </value>
                <value>
                    <fullName>Supportive Housing</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID_Number__c</fullName>
        <label>Member ID Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OOP_Max_In_Net__c</fullName>
        <label>OOP Max (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Max_Out_Net__c</fullName>
        <label>OOP Max (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Met_In_Net__c</fullName>
        <label>OOP Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Met_Out_Net__c</fullName>
        <label>OOP Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Insurance_Info__c</fullName>
        <label>Other Insurance Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PHP_Days__c</fullName>
        <label>PHP Days</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_DOB__c</fullName>
        <label>Policy Holder DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <label>Policy Holder Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Promissory_Cost__c</fullName>
        <label>Promissory Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promissory_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promissory Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_Out_To__c</fullName>
        <label>Referred Out To:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rent_Housing_Cost__c</fullName>
        <label>Rent/Housing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Provided__c</fullName>
        <label>Services Provided</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Counseling</fullName>
                </value>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Supportive Housing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stipulations_Notes__c</fullName>
        <label>Stipulations/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Address__c</fullName>
        <label>Subscriber Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_DOB__c</fullName>
        <label>Subscriber DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscriber_Email__c</fullName>
        <label>Subscriber Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subscriber_Phone__c</fullName>
        <label>Subscriber Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subscriber_Relationship__c</fullName>
        <label>Subscriber Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplies__c</fullName>
        <label>Supplies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Agreed_To_Pay__c</fullName>
        <label>Total Agreed To Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transport_Info__c</fullName>
        <label>Transport Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_Cost__c</fullName>
        <label>Treatment Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>Admissions_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Admissions Contacts</label>
        <sharedTo>
            <group>Admissions</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Center_City_Admitted</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>ADMITTED Center City Recovery</value>
        </filters>
        <label>Center City Admitted</label>
    </listViews>
    <listViews>
        <fullName>Did_Not_Admit</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>DID NOT ADMIT</value>
        </filters>
        <label>Did Not Admit</label>
    </listViews>
    <listViews>
        <fullName>Haven_Admitted</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>ADMITTED Haven Detox</value>
        </filters>
        <label>Haven Admitted</label>
    </listViews>
    <listViews>
        <fullName>ICFR_Admitted</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>ADMITTED Indian Center For Recovery</value>
        </filters>
        <label>ICFR Admitted</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>TRT_Admitted</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>ADMITTED The Recovery Team</value>
        </filters>
        <label>TRT Admitted</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>